--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -12,6 +12,7 @@ body {
     display: grid;
     place-items: center;
     ul {
+        margin-top: 305px;
         width: 80%;
         display: flex;
         flex-flow: row nowrap;
@@ -19,10 +20,32 @@ body {
         li {
             width: $ball-width;
             height: $ball-width;
-            border: 1px solid black;
+            border: 8px solid black;
             border-radius: $ball-width;
             background-color: red;
+            z-index: 0;
             list-style: none;
+            &:hover {
+                border: 8px 1px 1px 1px solid black;
+            }
+            display: grid;
+            place-items: center;
+            .upper {
+                background: black;
+                width: 100px;
+                border;
+            }
+            .bottom {
+                background: black;
+            }
+            .dot {
+                $dot-size: 20px;
+                background: black;
+                width: $dot-size;
+                height: $dot-size;
+                border-radius: $dot-size;
+                width: calc($ball-width/3);
+            }
         }
     }
 }
