--- a/css/pokemon_style.css
+++ b/css/pokemon_style.css
@@ -130,4 +130,59 @@
   font-weight: bold;
   font-size: calc(36vw / 40);
 }
+
+.card .middle .middle_abilities {
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+  font-size: calc(36vw / 20);
+  width: 100%;
+  padding: 5px;
+  font-weight: bolder;
+  text-transform: capitalize;
+}
+
+.card .middle .middle_abilities #ability {
+  color: #3b4cca;
+}
+
+.card .middle .middle_stats {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
+
+.card .middle .middle_stats #stat {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: calc(36vw / 20);
+  font-weight: 400;
+  text-align: center;
+}
+
+.card .middle .middle_stats #stat .value {
+  font-size: calc(36vw / 15);
+  font-weight: 600;
+}
+
+.card .bottom #license_info {
+  font-size: 5px;
+}
 /*# sourceMappingURL=pokemon_style.css.map */
