--- a/css/pokemon_style.css
+++ b/css/pokemon_style.css
@@ -9,6 +9,8 @@
 }
 
 .card {
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
   border: 15px solid #ffde00;
   border-radius: 0.5em;
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.25)), to(rgba(0, 0, 0, 0.25))), url("../assets/images/card_back.png");
@@ -21,6 +23,13 @@
   min-width: 130px;
   min-height: 231px;
   padding: 2px 5px 2px 5px;
+}
+
+.card:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  -webkit-box-shadow: 20px 20px 20px black;
+          box-shadow: 20px 20px 20px black;
 }
 
 .card .top .top_data {
