--- a/pokemon_style.scss
+++ b/pokemon_style.scss
@@ -14,6 +14,13 @@ $text-stronger: #cc0000;
 $sub-heading: #3b4cca;
 
 .card {
+	transition: all 0.3s;
+
+	&:hover {
+		transform: scale(1.2);
+		box-shadow: 20px 20px 20px black;
+	}
+
 	border: 15px solid $border-color;
 	border-radius: 0.5em;
 
