--- a/css/pokemon_style.css
+++ b/css/pokemon_style.css
@@ -8,28 +8,24 @@
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
+body {
+  overflow: hidden;
+}
+
 .card {
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
   border: 15px solid #ffde00;
   border-radius: 0.5em;
+  overflow: hidden;
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.25)), to(rgba(0, 0, 0, 0.25))), url("../assets/images/card_back.png");
   background: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url("../assets/images/card_back.png");
   background-size: cover;
-  width: 36vw;
-  margin: 0 auto;
-  margin-top: 30px;
-  margin-bottom: 30px;
-  min-width: 130px;
-  min-height: 231px;
+  height: 400px;
+  width: 280px;
   padding: 2px 5px 2px 5px;
 }
 
-.card:hover {
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
-  -webkit-box-shadow: 20px 20px 20px black;
-          box-shadow: 20px 20px 20px black;
+.card .top {
+  max-width: 100%;
 }
 
 .card .top .top_data {
@@ -52,14 +48,14 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-size: calc(36vw / 15);
+  font-size: 14px;
   float: right;
 }
 
 .card .top .top_data .top_data_top #name {
   text-transform: capitalize;
   font-weight: 900;
-  font-size: calc(36vw / 13);
+  font-size: 18px;
 }
 
 .card .top .top_data .top_data_top #side_grouping {
@@ -137,13 +133,13 @@
 .card .middle .middle_base_info p {
   font-style: italic;
   font-weight: bold;
-  font-size: calc(36vw / 40);
+  font-size: 5px;
 }
 
 .card .middle .middle_abilities {
   border-top: 2px solid black;
   border-bottom: 2px solid black;
-  font-size: calc(36vw / 20);
+  font-size: 16px;
   width: 100%;
   padding: 5px;
   font-weight: bolder;
@@ -181,17 +177,31 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  font-size: calc(36vw / 20);
+  font-size: 12px;
   font-weight: 400;
   text-align: center;
 }
 
 .card .middle .middle_stats #stat .value {
-  font-size: calc(36vw / 15);
+  font-size: 15px;
   font-weight: 600;
 }
 
 .card .bottom #license_info {
   font-size: 5px;
+}
+
+.card-container {
+  height: 100vh;
+  width: 100vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 /*# sourceMappingURL=pokemon_style.css.map */
