--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -8,9 +8,22 @@
 }
 
 $ball-width: 150px;
+@font-face {
+    font-family: pokemonFont;
+    src: url(../fonts/Pokemon-Hollow.ttf);
+}
+
 body {
     display: grid;
     place-items: center;
+    font-family: pokemonFont;
+    .title {
+        $blue: #0564BA;
+        $yellow: #FFCC00;
+        font-size: 70px;
+        color: $yellow;
+        text-shadow: $blue 3px 0px 0px, $blue 2.83487px 0.981584px 0px, $blue 2.35766px 1.85511px 0px, $blue 1.62091px 2.52441px 0px, $blue 0.705713px 2.91581px 0px, $blue -0.287171px 2.98622px 0px, $blue -1.24844px 2.72789px 0px, $blue -2.07227px 2.16926px 0px, $blue -2.66798px 1.37182px 0px, $blue -2.96998px 0.42336px 0px, $blue -2.94502px -0.571704px 0px, $blue -2.59586px -1.50383px 0px, $blue -1.96093px -2.27041px 0px, $blue -1.11013px -2.78704px 0px, $blue -0.137119px -2.99686px 0px, $blue 0.850987px -2.87677px 0px, $blue 1.74541px -2.43999px 0px, $blue 2.44769px -1.73459px 0px, $blue 2.88051px -0.838247px 0px;
+    }
     ul {
         margin-top: 305px;
         width: 80%;
@@ -33,7 +46,6 @@ body {
             .upper {
                 background: black;
                 width: 100px;
-                border;
             }
             .bottom {
                 background: black;
