--- a/css/pokemon_style.css
+++ b/css/pokemon_style.css
@@ -12,6 +12,20 @@ body {
   overflow: hidden;
 }
 
+.card-container::before {
+  content: "";
+  position: absolute;
+  width: 300vw;
+  height: 300vh;
+  z-index: -1;
+  background: #8ec5fc url(../assets/images/pokeball.svg);
+  -webkit-transform: rotate(30deg);
+          transform: rotate(30deg);
+  background-position: center;
+  background-repeat: repeat;
+  background-size: 5vw;
+}
+
 .card-container {
   height: 100vh;
   width: 100vw;
@@ -24,9 +38,6 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  background: #8ec5fc url("../assets/images/pokeball.svg");
-  background-size: 5vw;
-  background-position: center;
 }
 
 .card-container .card {
