--- a/pokemon_style.scss
+++ b/pokemon_style.scss
@@ -17,16 +17,27 @@ body {
 	overflow: hidden;
 }
 
+.card-container::before {
+	content: "";
+
+	position: absolute;
+
+	width: 300vw;
+	height: 300vh;
+	z-index: -1;
+	background: #8ec5fc url(../assets/images/pokeball.svg);
+	transform: rotate(30deg);
+	background-position: center;
+	background-repeat: repeat;
+	background-size: 5vw;
+}
+
 .card-container {
 	height: 100vh;
 	width: 100vw;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-
-	background: #8ec5fc url("../assets/images/pokeball.svg");
-	background-size: 5vw;
-	background-position: center;
 
 	.card {
 		border: 15px solid $border-color;
