--- a/pokemon_style.scss
+++ b/pokemon_style.scss
@@ -101,6 +101,8 @@ body {
 					#image_of {
 						border: 5px solid $border-color;
 						width: 80%;
+						margin-top: 15px;
+						margin-bottom: 5px;
 						border-radius: 0.05em;
 					}
 				}
@@ -141,11 +143,15 @@ body {
 				font-size: 16px;
 				width: 100%;
 				padding: 5px;
+				margin-top: 15px;
+				margin-bottom: 15px;
 				font-weight: bolder;
 				text-transform: capitalize;
 
 				#ability {
 					color: $sub-heading;
+					margin-top: 5px;
+					margin-bottom: 5px;
 				}
 			}
 			.middle_stats {
@@ -176,6 +182,7 @@ body {
 		}
 
 		.bottom {
+			margin-top: 15px;
 			#license_info {
 				font-size: 5px;
 			}
