--- a/css/pokemon_style.css
+++ b/css/pokemon_style.css
@@ -129,6 +129,7 @@ body {
   margin-top: 15px;
   margin-bottom: 5px;
   border-radius: 0.05em;
+  background: #ffde00;
 }
 
 .card-container .card .middle {
