--- a/pokemon_style.scss
+++ b/pokemon_style.scss
@@ -104,6 +104,7 @@ body {
 						margin-top: 15px;
 						margin-bottom: 5px;
 						border-radius: 0.05em;
+						background: $border-color;
 					}
 				}
 			}
