--- a/pokemon_style.scss
+++ b/pokemon_style.scss
@@ -189,3 +189,28 @@ body {
 		}
 	}
 }
+
+#home {
+	position: absolute;
+	left: 0;
+	bottom: 0;
+
+	border: none;
+	outline: none;
+	margin: 10px;
+	padding: 5px 15px 8px 15px;
+	font-weight: bolder;
+
+	transition: all 0.3s;
+
+	background-color: $border-color;
+	color: black;
+
+	&:hover {
+		background-color: $sub-heading;
+		color: white;
+	}
+
+	border-radius: 0.5em;
+	font-size: 28px;
+}
