--- a/css/style.css
+++ b/css/style.css
@@ -20,11 +20,16 @@ body {
   font-family: pokeFont;
 }
 
-body h1 {
+body .title {
+  width: 100vw;
+  text-align: center;
+}
+
+body .title h1 {
   font-family: pokeFont;
-  font-size: 70px;
+  font-size: 5vw;
   color: #FFCC00;
-  text-shadow: #0564BA 3px 0px 0px, #0564BA 2.83487px 0.98158px 0px, #0564BA 2.35766px 1.85511px 0px, #0564BA 1.62091px 2.52441px 0px, #0564BA 0.70571px 2.91581px 0px, #0564BA -0.28717px 2.98622px 0px, #0564BA -1.24844px 2.72789px 0px, #0564BA -2.07227px 2.16926px 0px, #0564BA -2.66798px 1.37182px 0px, #0564BA -2.96998px 0.42336px 0px, #0564BA -2.94502px -0.5717px 0px, #0564BA -2.59586px -1.50383px 0px, #0564BA -1.96093px -2.27041px 0px, #0564BA -1.11013px -2.78704px 0px, #0564BA -0.13712px -2.99686px 0px, #0564BA 0.85099px -2.87677px 0px, #0564BA 1.74541px -2.43999px 0px, #0564BA 2.44769px -1.73459px 0px, #0564BA 2.88051px -0.83825px 0px;
+  text-shadow: -2px 10px 0px #0564BA, -3px 9px 0px #0564BA, -3px 11px 0px #0564BA, -3px -5px 0px #0564BA;
 }
 
 body ul {
