--- a/css/style.css
+++ b/css/style.css
@@ -27,52 +27,23 @@ body .title {
   text-shadow: #0564BA 3px 0px 0px, #0564BA 2.83487px 0.98158px 0px, #0564BA 2.35766px 1.85511px 0px, #0564BA 1.62091px 2.52441px 0px, #0564BA 0.70571px 2.91581px 0px, #0564BA -0.28717px 2.98622px 0px, #0564BA -1.24844px 2.72789px 0px, #0564BA -2.07227px 2.16926px 0px, #0564BA -2.66798px 1.37182px 0px, #0564BA -2.96998px 0.42336px 0px, #0564BA -2.94502px -0.5717px 0px, #0564BA -2.59586px -1.50383px 0px, #0564BA -1.96093px -2.27041px 0px, #0564BA -1.11013px -2.78704px 0px, #0564BA -0.13712px -2.99686px 0px, #0564BA 0.85099px -2.87677px 0px, #0564BA 1.74541px -2.43999px 0px, #0564BA 2.44769px -1.73459px 0px, #0564BA 2.88051px -0.83825px 0px;
 }
 
-body ul {
-  margin-top: 305px;
-  width: 80%;
+body .ballWrapper {
+  width: 80vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row nowrap;
-          flex-flow: row nowrap;
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
 }
 
-body ul li {
+body .ballWrapper object {
   width: 150px;
   height: 150px;
-  border: 8px solid black;
-  border-radius: 150px;
-  background-color: #F60A4A;
-  z-index: 0;
-  list-style: none;
-  display: -ms-grid;
-  display: grid;
-  place-items: center;
 }
 
-body ul li:hover {
-  border: 8px 1px 1px 1px solid black;
-}
-
-body ul li .upper {
-  background: black;
-  width: 100px;
-}
-
-body ul li .bottom {
-  background: black;
-}
-
-body ul li .dot {
-  background: black;
-  width: 20px;
-  height: 20px;
-  border-radius: 20px;
-  width: calc($ball-width/3);
+body .ballWrapper object:hover #upper {
+  -webkit-transform: translateY(-100px);
+          transform: translateY(-100px);
 }
 /*# sourceMappingURL=style.css.map */
