--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -9,7 +9,6 @@
 
 $blue: #0564BA;
 $yellow: #FFCC00;
-
 $ball-width: 150px;
 @font-face {
     font-family: pokeFont;
@@ -31,12 +30,10 @@ body {
     .title {
         width: 100vw;
         text-align: center;
-
-        h1{
+        h1 {
             font-family: pokeFont;
             font-size: 5vw;
             color: $yellow;
-
             text-shadow: -2px 10px 0px $blue, -3px 9px 0px $blue, -3px 11px 0px $blue, -3px -5px 0px $blue;
         }
     }
@@ -44,12 +41,14 @@ body {
         width: 80vw;
         display: flex;
         justify-content: space-evenly;
-        object {
-            width: 150px;
-            height: 150px;
-            &:hover {
-                #upper {
-                    transform: translateY(-100px);
+        a {
+            svg {
+                width: 150px;
+                height: 150px;
+                &:hover {
+                    #upper {
+                        transform: translateY(-100px);
+                    }
                 }
             }
         }
