--- a/css/bounce.css
+++ b/css/bounce.css
@@ -1,27 +1,48 @@
+/* variables */
+
 :root {
     --ball-size: 150px;
     --bounce-height: 160px
 }
 
-.ballWrapper a {
-    animation: bounce 1s, shake 1s;
-    animation-delay: 0, 1s;
+
+/* first pokemon ball */
+
+.ballWrapper a:nth-child(1) {
+    animation: bounce 1s;
+    animation-delay: 0s;
     transform: translateY(0px);
-    animation-iteration-count: 1, 1;
-    animation-fill-mode: both, forwards;
+    animation-iteration-count: 1;
+    animation-fill-mode: both;
     position: relative;
-    top: 0;
+    /* top: 0; */
 }
+
+.ballWrapper a:hover {
+    animation: shake 1s;
+    /* animation-delay: 1s; */
+    animation-iteration-count: 1;
+    animation-fill-mode: both;
+}
+
+
+/* Second pokemon ball */
 
 .ballWrapper a:nth-child(2) {
-    animation-delay: 300ms, 2s;
+    animation-delay: 300ms;
     top: 0;
 }
 
+
+/* third pokemon ball */
+
 .ballWrapper a:nth-child(3) {
-    animation-delay: 600ms, 2s;
+    animation-delay: 600ms;
     top: 0;
 }
+
+
+/* Animations */
 
 @keyframes bounce {
     0% {
@@ -41,14 +62,19 @@
 }
 
 @keyframes shake {
+    0% {
+        transform: rotate(0deg);
+    }
     25% {
         transform: rotate(30deg);
     }
     50% {
         transform: rotate(0deg);
-        animation-delay: 1s;
     }
     75% {
         transform: rotate(-30deg);
+    }
+    100% {
+        transform: rotate(0deg);
     }
 }
