--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,49 +1,51 @@
 *,
 *::before,
 *::after {
-    padding: 0;
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+	font-family: Arial, Helvetica, sans-serif;
+	box-sizing: border-box;
 }
 
-$blue: #0564BA;
-$yellow: #FFCC00;
+$blue: #0564ba;
+$yellow: #ffcc00;
 $ball-width: 150px;
 @font-face {
-    font-family: pokeFont;
-    src: url("../Pokemon.ttf")
+	font-family: pokeFont;
+	src: url("../Pokemon.ttf");
 }
 
 body {
-    $background: #E9F7FF;
-    display: grid;
-    place-items: center;
-    font-family: pokeFont;
-    .title {
-        width: 100vw;
-        text-align: center;
-        h1 {
-            font-family: pokeFont;
-            font-size: 5vw;
-            color: $yellow;
-            text-shadow: -2px 10px 0px $blue, -3px 9px 0px $blue, -3px 11px 0px $blue, -3px -5px 0px $blue;
-        }
-    }
-    .ballWrapper {
-        width: 80vw;
-        display: flex;
-        justify-content: space-evenly;
-        a {
-            svg {
-                width: 150px;
-                height: 150px;
-                &:hover {
-                    #upper {
-                        transform: translateY(-100px);
-                    }
-                }
-            }
-        }
-    }
+	$background: #e9f7ff;
+	display: grid;
+	place-items: center;
+	font-family: pokeFont;
+	.title {
+		width: 100vw;
+		text-align: center;
+		h1,
+		p {
+			font-family: pokeFont;
+			font-size: 5vw;
+			color: $yellow;
+			-webkit-text-stroke: 2px $blue;
+			letter-spacing: 0.1em;
+		}
+	}
+	.ballWrapper {
+		width: 80vw;
+		display: flex;
+		justify-content: space-evenly;
+		a {
+			svg {
+				width: 150px;
+				height: 150px;
+				&:hover {
+					#upper {
+						transform: translateY(-100px);
+					}
+				}
+			}
+		}
+	}
 }
