--- a/css/style.css
+++ b/css/style.css
@@ -25,11 +25,13 @@ body .title {
   text-align: center;
 }
 
-body .title h1 {
+body .title h1,
+body .title p {
   font-family: pokeFont;
   font-size: 5vw;
-  color: #FFCC00;
-  text-shadow: -2px 10px 0px #0564BA, -3px 9px 0px #0564BA, -3px 11px 0px #0564BA, -3px -5px 0px #0564BA;
+  color: #ffcc00;
+  -webkit-text-stroke: 2px #0564ba;
+  letter-spacing: 0.1em;
 }
 
 body .ballWrapper {
