--- a/css/pokemon_style.css
+++ b/css/pokemon_style.css
@@ -80,6 +80,11 @@ body {
 }
 
 .card-container .card_holder .card {
+  cursor: all-scroll;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
   border: 15px solid #ffde00;
   border-radius: 0.5em;
   -webkit-transition-property: -webkit-box-shadow transform;
