Upgraded card animations.

--- a/pokemon_style.scss
+++ b/pokemon_style.scss
@@ -31,6 +31,7 @@ body {
 
 	background-repeat: repeat;
 	-webkit-background-clip: text;
+	background-clip: text;
 	-webkit-text-fill-color: transparent;
 	text-align: center;
 	-webkit-font-smoothing: antialiased;
