--- a/css/pokemon_style.css
+++ b/css/pokemon_style.css
@@ -25,6 +25,7 @@ body {
           filter: brightness(0.5);
   background-repeat: repeat;
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
   text-align: center;
   -webkit-font-smoothing: antialiased;
