--- a/css/pokemon_style.css
+++ b/css/pokemon_style.css
@@ -80,8 +80,26 @@ body {
   transition: none;
 }
 
+.card-container .card_holder:active {
+  -webkit-transition-duration: 0.2s;
+          transition-duration: 0.2s;
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
+}
+
+.card-container .card_holder:active .card {
+  border: 15px solid #3b4cca;
+  background-image: url(../assets/images/card_back.jpg);
+  background-position: center;
+  background-size: 115%;
+}
+
+.card-container .card_holder:active .card * {
+  display: none;
+}
+
 .card-container .card_holder .card {
-  cursor: all-scroll;
+  cursor: pointer;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
