--- a/pokemon_style.scss
+++ b/pokemon_style.scss
@@ -77,7 +77,7 @@ body {
 			transform: rotateY(180deg);
 
 			.card {
-				border: 15px solid $sub-heading;
+				border: 15px solid #111183;
 				background-image: url(../assets/images/card_back.jpg);
 				background-position: center;
 				background-size: 115%;
