--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,51 +1,124 @@
 *,
 *::before,
 *::after {
-	padding: 0;
-	margin: 0;
-	font-family: Arial, Helvetica, sans-serif;
-	box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
 }
 
 $blue: #0564ba;
 $yellow: #ffcc00;
 $ball-width: 150px;
 @font-face {
-	font-family: pokeFont;
-	src: url("../Pokemon.ttf");
+    font-family: pokeFont;
+    src: url("../Pokemon.ttf");
 }
 
 body {
-	$background: #e9f7ff;
-	display: grid;
-	place-items: center;
-	font-family: pokeFont;
-	.title {
-		width: 100vw;
-		text-align: center;
-		h1,
-		p {
-			font-family: pokeFont;
-			font-size: 5vw;
-			color: $yellow;
-			-webkit-text-stroke: 2px $blue;
-			letter-spacing: 0.1em;
-		}
-	}
-	.ballWrapper {
-		width: 80vw;
-		display: flex;
-		justify-content: space-evenly;
-		a {
-			svg {
-				width: 150px;
-				height: 150px;
-				&:hover {
-					#upper {
-						transform: translateY(-100px);
-					}
-				}
-			}
-		}
-	}
+    $background: #e9f7ff;
+    display: grid;
+    place-items: center;
+    font-family: pokeFont;
+    background-color: hsl(195, 41%, 48%);
+    .title {
+        width: 100vw;
+        text-align: center;
+        h1,
+        p {
+            font-family: pokeFont;
+            font-size: 5vw;
+            color: $yellow;
+            -webkit-text-stroke: 2px $blue;
+            letter-spacing: 0.1em;
+        }
+    }
+    .imgWrapper {
+        width: 80vw;
+        display: flex;
+        justify-content: space-evenly;
+        img {
+            width: 100px;
+            opacity: .2;
+            z-index: 100;
+            &:nth-child(1) {
+                position: relative;
+                top: 162px;
+                left: 0px;
+            }
+            &:nth-child(2) {
+                position: relative;
+                top: 163px;
+                left: 10px;
+            }
+            &:nth-child(3) {
+                position: relative;
+                top: 176px;
+                left: 15px;
+            }
+            #centerCircle,
+            #bottom {
+                z-index: 120;
+            }
+        }
+    }
+    .ballWrapper {
+        width: 80vw;
+        display: flex;
+        justify-content: space-evenly;
+        a {
+            svg {
+                width: 150px;
+                height: 150px;
+                &:hover {
+                    animation: shake 1s infinite;
+                    animation: show 1s infinite forwards;
+                    transition-duration: 200ms;
+                }
+            }
+        }
+    }
+}
+
+$shakeDeg: 15deg;
+@keyframes shake {
+    0% {
+        transform: translate(0, 0) rotate(0);
+    }
+    20% {
+        transform: translate(-10px, 0) rotate(-20deg);
+    }
+    30% {
+        transform: translate(10px, 0) rotate(20deg);
+    }
+    50% {
+        transform: translate(-10px, 0) rotate(-10deg);
+    }
+    60% {
+        transform: translate(10px, 0) rotate(10deg);
+    }
+    100% {
+        transform: translate(0, 0) rotate(0);
+    }
+}
+
+@keyframes show {
+    0% {
+        transform: rotateY(0deg);
+    }
+    25% {
+        opacity: 0;
+        transform: rotateY(90deg);
+    }
+    50% {
+        opacity: .5;
+        transform: rotateY(180deg);
+    }
+    75% {
+        opacity: 1;
+        transform: rotateY(-90deg);
+    }
+    100% {
+        transform: rotateY(-180deg);
+    }
 }
