--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -15,6 +15,20 @@ $ball-width: 150px;
     src: url("../Pokemon.ttf");
 }
 
+.picture {
+    transition: all 1s;
+}
+
+.hide {
+    opacity: 0;
+}
+
+.Choose {}
+
+.effect {
+    transform: translateY(120px);
+}
+
 body {
     $background: #e9f7ff;
     display: grid;
@@ -33,27 +47,39 @@ body {
             letter-spacing: 0.1em;
         }
     }
+    .chooseWrapper {
+        display: flex;
+        justify-content: space-evenly;
+        width: 90vw;
+        // height: 0;
+        img {
+            padding-left: 100px;
+            height: 100px;
+            transform: rotate(90deg);
+        }
+    }
     .imgWrapper {
         width: 80vw;
         display: flex;
         justify-content: space-evenly;
+        // height: 0;
         img {
-            width: 100px;
-            opacity: .2;
-            z-index: 100;
+            height: 100px;
+            // z-index: 100;
             &:nth-child(1) {
                 position: relative;
-                top: 162px;
+                top: 156px;
                 left: 0px;
             }
             &:nth-child(2) {
                 position: relative;
-                top: 163px;
-                left: 10px;
+                top: 152px;
+                left: 15px;
             }
             &:nth-child(3) {
+                height: 110px;
                 position: relative;
-                top: 176px;
+                top: 164px;
                 left: 15px;
             }
             #centerCircle,
@@ -66,14 +92,14 @@ body {
         width: 80vw;
         display: flex;
         justify-content: space-evenly;
+        // height: 0;
         a {
             svg {
                 width: 150px;
                 height: 150px;
                 &:hover {
                     animation: shake 1s infinite;
-                    animation: show 1s infinite forwards;
-                    transition-duration: 200ms;
+                    // transition-duration: 200ms;
                 }
             }
         }
@@ -111,7 +137,7 @@ $shakeDeg: 15deg;
         transform: rotateY(90deg);
     }
     50% {
-        opacity: .5;
+        opacity: 0.5;
         transform: rotateY(180deg);
     }
     75% {
