--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,20 @@
   src: url("../Pokemon.ttf");
 }
 
+.picture {
+  -webkit-transition: all 1s;
+  transition: all 1s;
+}
+
+.hide {
+  opacity: 0;
+}
+
+.effect {
+  -webkit-transform: translateY(120px);
+          transform: translateY(120px);
+}
+
 body {
   display: -ms-grid;
   display: grid;
@@ -35,6 +49,23 @@ body .title p {
   letter-spacing: 0.1em;
 }
 
+body .chooseWrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  width: 90vw;
+}
+
+body .chooseWrapper img {
+  padding-left: 100px;
+  height: 100px;
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+}
+
 body .imgWrapper {
   width: 80vw;
   display: -webkit-box;
@@ -46,26 +77,25 @@ body .imgWrapper {
 }
 
 body .imgWrapper img {
-  width: 100px;
-  opacity: .2;
-  z-index: 100;
+  height: 100px;
 }
 
 body .imgWrapper img:nth-child(1) {
   position: relative;
-  top: 162px;
+  top: 156px;
   left: 0px;
 }
 
 body .imgWrapper img:nth-child(2) {
   position: relative;
-  top: 163px;
-  left: 10px;
+  top: 152px;
+  left: 15px;
 }
 
 body .imgWrapper img:nth-child(3) {
+  height: 110px;
   position: relative;
-  top: 176px;
+  top: 164px;
   left: 15px;
 }
 
@@ -92,10 +122,6 @@ body .ballWrapper a svg {
 body .ballWrapper a svg:hover {
   -webkit-animation: shake 1s infinite;
           animation: shake 1s infinite;
-  -webkit-animation: show 1s infinite forwards;
-          animation: show 1s infinite forwards;
-  -webkit-transition-duration: 200ms;
-          transition-duration: 200ms;
 }
 
 @-webkit-keyframes shake {
@@ -163,7 +189,7 @@ body .ballWrapper a svg:hover {
             transform: rotateY(90deg);
   }
   50% {
-    opacity: .5;
+    opacity: 0.5;
     -webkit-transform: rotateY(180deg);
             transform: rotateY(180deg);
   }
@@ -189,7 +215,7 @@ body .ballWrapper a svg:hover {
             transform: rotateY(90deg);
   }
   50% {
-    opacity: .5;
+    opacity: 0.5;
     -webkit-transform: rotateY(180deg);
             transform: rotateY(180deg);
   }
