--- a/css/style.css
+++ b/css/style.css
@@ -18,13 +18,13 @@
   transition: all 1s;
 }
 
-.hide {
-  opacity: 1;
+.picture2 {
+  -webkit-transition: all .8s;
+  transition: all .8s;
 }
 
-.hands {
-  -webkit-transition: all 1s;
-  transition: all 1s;
+.hide {
+  opacity: 1;
 }
 
 .hover {
@@ -193,58 +193,6 @@ body .ballWrapper a svg:hover {
   100% {
     -webkit-transform: translate(0, 0) rotate(0);
             transform: translate(0, 0) rotate(0);
-  }
-}
-
-@-webkit-keyframes show {
-  0% {
-    -webkit-transform: rotateY(0deg);
-            transform: rotateY(0deg);
-  }
-  25% {
-    opacity: 0;
-    -webkit-transform: rotateY(90deg);
-            transform: rotateY(90deg);
-  }
-  50% {
-    opacity: 0.5;
-    -webkit-transform: rotateY(180deg);
-            transform: rotateY(180deg);
-  }
-  75% {
-    opacity: 1;
-    -webkit-transform: rotateY(-90deg);
-            transform: rotateY(-90deg);
-  }
-  100% {
-    -webkit-transform: rotateY(-180deg);
-            transform: rotateY(-180deg);
-  }
-}
-
-@keyframes show {
-  0% {
-    -webkit-transform: rotateY(0deg);
-            transform: rotateY(0deg);
-  }
-  25% {
-    opacity: 0;
-    -webkit-transform: rotateY(90deg);
-            transform: rotateY(90deg);
-  }
-  50% {
-    opacity: 0.5;
-    -webkit-transform: rotateY(180deg);
-            transform: rotateY(180deg);
-  }
-  75% {
-    opacity: 1;
-    -webkit-transform: rotateY(-90deg);
-            transform: rotateY(-90deg);
-  }
-  100% {
-    -webkit-transform: rotateY(-180deg);
-            transform: rotateY(-180deg);
   }
 }
 /*# sourceMappingURL=style.css.map */
