--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -12,7 +12,7 @@ $yellow: #ffcc00;
 $ball-width: 150px;
 @font-face {
     font-family: pokeFont;
-    src: url("../Pokemon.ttf");
+    src: url("../assets/fonts/Pokemon.ttf");
 }
 
 .picture {
