--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 
 @font-face {
   font-family: pokeFont;
-  src: url("../Pokemon.ttf");
+  src: url("../assets/fonts/Pokemon.ttf");
 }
 
 .picture {
